--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "msw": "^2.7.0",
     "postcss": "^8",
     "prettier": "^3.4.2",
+    "sonarqube-scanner": "^4.2.6",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5"
