--- a/package.json
+++ b/package.json
@@ -10,16 +10,15 @@
     "lint:fix": "next lint --fix",
     "prettier": "prettier --write src/**/*.{js,jsx,json,ts,tsx,scss,css,md}",
     "prepare": "husky",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
-    "babel-jest": "^29.7.0",
     "clsx": "^2.1.1",
-    "identity-obj-proxy": "^3.0.0",
     "next": "15.1.3",
     "next-seo": "^6.6.0",
-    "prettier-plugin-tailwindcss": "^0.6.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
@@ -27,10 +26,11 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
+    "@jest/types": "^29.6.3",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -42,12 +42,15 @@
     "eslint-plugin-tailwindcss": "^3.17.5",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.3.0",
     "msw": "^2.7.0",
     "postcss": "^8",
     "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.9",
     "sonarqube-scanner": "^4.2.6",
     "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5"
   },
