--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -51,7 +51,7 @@ jobs:
 
       # Run tests and generate coverage report
       - name: Run Tests
-        run: npm run test:coverage
+        run: npm run test:coverage -- --ci
 
       # Upload coverage report as artifact
       - name: Upload Coverage Report
