--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -60,6 +60,12 @@ jobs:
           name: coverage-report
           path: ./coverage/lcov-report
 
+      # Upload coverage report to Codecov
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+
       # Build the project
       - name: Build Project
         run: npm run build
