--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
+    "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "next": "15.1.3",
+    "next-auth": "^4.24.11",
     "next-seo": "^6.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
+    "swr": "^2.3.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
