--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -9,63 +9,76 @@ on:
       - main
 
 jobs:
-  ci:
+  test:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout the repository
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      # Set up Node.js
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 18.x
           cache: 'npm'
 
-      # Cache node_modules
-      - name: Cache Node.js modules
+      - name: Cache NPM Cache
         uses: actions/cache@v3
         with:
-          path: node_modules
+          path: ~/.npm
           key: ${{ runner.os }}-node-modules-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-modules-
 
-      # Install dependencies
       - name: Install Dependencies
-        run: npm install
+        run: npm ci
 
-      # Run lint:fix to automatically fix fixable issues
       - name: Run Lint:Fix
         run: npm run lint:fix
 
-      # Run Prettier
       - name: Run Prettier
         run: npm run prettier
 
-      # Lint the code
       - name: Lint Code
         run: npm run lint
 
-      # Run tests and generate coverage report
-      - name: Run Tests
+      - name: Run Tests and Generate Coverage Report
         run: npm run test:coverage -- --ci
 
-      # Upload coverage report as artifact
       - name: Upload Coverage Report
         uses: actions/upload-artifact@v3
         with:
           name: coverage-report
           path: ./coverage/lcov-report
 
-      # Upload coverage report to Codecov
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
 
-      # Build the project
+  build:
+    runs-on: ubuntu-latest
+    needs: test # Only build the project if tests pass
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18.x
+          cache: 'npm'
+
+      - name: Cache NPM Cache
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-npm-cache-
+
+      - name: Install Dependencies
+        run: npm ci
+
       - name: Build Project
         run: npm run build
