--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -11,8 +11,6 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    outputs:
-      npm-cache-hit: ${{ steps.cache-npm.outputs.cache-hit }}
 
     steps:
       - name: Checkout Code
@@ -25,10 +23,9 @@ jobs:
           cache: 'npm'
 
       - name: Cache NPM Cache
-        id: cache-npm
         uses: actions/cache@v3
         with:
-          path: ${{ github.workspace}}/.npm
+          path: ~/.npm
           key: ${{ runner.os }}-node-modules-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-modules-
@@ -75,10 +72,10 @@ jobs:
       - name: Cache NPM Cache
         uses: actions/cache@v3
         with:
-          path: ${{ github.workspace}}/.npm
-          key: ${{ runner.os }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
+          path: ~/.npm
+          key: ${{ runner.os }}-node-modules-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
-            ${{ runner.os }}-npm-cache-
+            ${{ runner.os }}-node-modules-
 
       - name: Install Dependencies
         run: npm ci
