--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@ant-design/nextjs-registry": "^1.0.2",
     "@reduxjs/toolkit": "^2.5.0",
+    "antd": "^5.23.0",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "next": "15.1.3",
     "next-auth": "^4.24.11",
     "next-seo": "^6.6.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
     "swr": "^2.3.0",
