--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-fixed-jsdom": "^0.0.9",
     "lint-staged": "^15.3.0",
     "msw": "^2.7.0",
     "postcss": "^8",
